# dft-project

./: .env.sample  .gitignore  .pre-commit-config.yaml  BLUEPRINT.md  CLAUDE.md  Caddyfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
backend/: Dockerfile  alembic.ini
db/: init.sql
docs/: Esito-Atteso-Audit-DFT-C1-2026-06-01.md  agentos-context.md  analisi-xlsx-2025.md  audit-dft-c1-action-plan-100pct.md  audit-dft-c1-cliente-data-request.md  audit-dft-c1-evidence-matrix.md  audit-dft-c1-f0-questionnaire.md  audit-dft-c1-f0-responses-round1.md  audit-dft-c1-f0h-scheme-misclassification.md  audit-dft-c1-paper-records-statement.md  audit-dft-c1-recheck-2026-06-01-IT.md  audit-dft-c1-recheck-2026-06-01.md  audit-dft-c1-round5-verdict.md  audit-dft-c1-scheme-mismatch-investigation.md  audit-dft-c1-sprint-e8-equivalence-matrix.md  blueprint-activities.md  blueprint-review.md  brief-landing-page.md  brief-web-developer.md  dft-5wd-activity-plan.md  dft-action-plan-2026-05.md  dft-user-guide-EN.md  gap-analysis-2026-05-25.md  mass-balance-allocation-policy.md  plane-issue-mapping.json  plane-issue-payloads.json  proposta-modello-logistica-downstream.md  riepilogo-cliente-2026-05.md  rtfo-chain-of-custody-note-EN.md  rtfo-essential-guide.md  rtfo-gap-analysis.it.md  rtfo-gap-analysis.md  sprint-3-frontend.md  sprint-plan.md  stato-e-gap-catena.md
frontend/: Dockerfile
landing/: .env.example  .gitignore  README.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: backfill_cert_scope.py  convert_contracts_to_pdf.py  deploy.sh  export_audit_trail.py  gen_signing_cert.sh  generate_dft_tickets.py  grep_zuniga.py  ingest_xlsx.py  parse_xlsx.py  render_annex_a_final.py  render_annex_a_v1.py  render_cover_letter_final.py  render_cover_letter_sample.py  render_cover_letter_v0.py  render_cover_letter_v2.py  render_evidence_index_final.py  render_evidence_index_v0.py  render_evidence_index_v2.py  render_iscc_pos_status.py  render_mass_balance_sample.py  render_pathway_declaration.py  render_production_conversion_log.py  render_production_conversion_sample.py  render_stock_carryover.py  seed.py  (+6 more)
(+525 files in other folders)
